// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium"
  >
    <label
      class="aje-label"
      for="CustomSelect-3519441858017239"
      id="CustomSelect-1036107267185307"
    >
      Custom dropdown label
    </label>
    <div
      class="aje-combobox"
    >
      <div
        aria-controls="CustomSelect-1039096923599330"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-1036107267185307"
        class="aje-combobox__input"
        id="CustomSelect-3519441858017239"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <ul
        aria-labelledby="CustomSelect-1036107267185307"
        class="aje-combobox__menu"
        id="CustomSelect-1039096923599330"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="aje-combobox__option is-focused"
          role="option"
        >
          Option 1
        </li>
        <li
          aria-selected="false"
          class="aje-combobox__option"
          role="option"
        >
          Option 2
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium"
  >
    <div
      class="aje-combobox"
    >
      <div
        aria-controls="CustomSelect-1039096923599330"
        aria-describedby=""
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="CustomSelect-1036107267185307"
        class="aje-combobox__input"
        id="CustomSelect-3519441858017239"
        role="combobox"
        tabindex="0"
      >
        <span>
          Option 1
        </span>
      </div>
      <ul
        aria-labelledby="CustomSelect-1036107267185307"
        class="aje-combobox__menu"
        id="CustomSelect-1039096923599330"
        role="listbox"
        tabindex="-1"
      >
        <li
          aria-selected="true"
          class="aje-combobox__option is-focused"
          role="option"
        >
          Option 1
        </li>
        <li
          aria-selected="false"
          class="aje-combobox__option"
          role="option"
        >
          Option 2
        </li>
      </ul>
      <label
        class="aje-label"
        for="CustomSelect-3519441858017239"
        id="CustomSelect-1036107267185307"
      >
        Custom dropdown label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
